--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <div>
                     <button class="btn">Download CV</button>
-                    <button class="btn">Contact</button>
+                    <button>Contact</button>
                 </div>
             </div>
             <div class="banner-image">
