I added the about me section. It was pretty quick, maybe I am getting better at figma to html,css design. Haha

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <div>
                     <button class="btn">Download CV</button>
-                    <button>Contact</button>
+                    <button class="btn">Contact</button>
                 </div>
             </div>
             <div class="banner-image">
@@ -39,5 +39,33 @@
         </section>
 
     </header>
+
+    <main>
+        <article class="about-section">
+            <section class="about-me">
+                <h3>About Me</h3>
+                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            </section>
+            <section class="about-info">
+                <div class="contact-info">
+                    <span>Name:</span>
+                    <p>Sakib Ahmed</p>
+                </div>
+                <div class="contact-info">
+                    <span>Email:</span>
+                    <p>info@gmail.com</p>
+                </div>
+                <div class="contact-info">
+                    <span>Date of birth:</span>
+                    <p>25 November 2001</p>
+                </div>
+                <div class="contact-info">
+                    <span>From:</span>
+                    <p>Mirpur, Bangladesh</p>
+                </div>
+            </section>
+
+        </article>
+    </main>
 </body>
 </html>
