--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="banner-image">
-                <img src="/images/hardy.png" alt="">
+                <img src="./images/hardy.png" alt="">
             </div>
         </section>
 
@@ -152,5 +152,32 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="footer-contents-container">
+            <div class="footer-flex">
+                <section class="footer-content">
+                    <h2>Let's Connect</h2>
+                    <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                    <div class="footer-icon">
+                        <img src="./images/icons/facebook.png" alt="">
+                        <img src="./images/icons/twitter.png" alt="">
+                        <img src="./images/icons/insta.png" alt="">
+                    </div>
+                </section>
+                <section class="form-section">
+                    <h2>Let's Message</h2>
+                    <form>
+                        <input type="text" name="" id="" placeholder="Your name">
+                        <input type="email" placeholder="Your email">
+                        <textarea name="" id=""></textarea>
+                    </form>
+                </section>    
+            </div>
+        </div>
+         <div class="footer-btn">
+                <button class="btn">Submit</button>
+            </div>
+    </footer>
 </body>
 </html>
